--- a/finishing.html
+++ b/finishing.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cottage Poselki - Контакты</title>
+        <title>Cottage Poselki - Отделка</title>
         <link rel="stylesheet" href="./assets/scss/main.css">
     </head>
     <body>
         <header>
-            <section class="header header__contacts">
+            <section class="header header__finishing">
                 <div class="container">
                     <div class="header__content">
                         <div class="header__navbar">
@@ -81,14 +81,79 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header__contacts-wrapper">
-                            <div class="header__contacts-path">
+                        <div class="header__finishing-wrapper">
+                            <div class="header__pay-path">
                                 <a href="#">Главная</a>
-                                <a href="#"><img src="./assets/img/ico/ellipse.svg" alt="ellipse"></a>
-                                <p>Контакты</p>
+                                <a href="#"><img
+                                        src="./assets/img/ico/ellipse.svg"
+                                        alt="ellipse"></a>
+                                <p>Отделка</p>
                             </div>
-                            <div class="header__contacts-intro title__block">
-                                <h1>Наши контакты</h1>
+                        </div>
+                        <div class="header__finishing-intro-block">
+                            <div class="header__finishing-intro-item">
+                                <h1>Отделка без переплат</h1>
+                                <p>
+                                    Создадим уют в вашем доме, возьмём все
+                                    заботы на себя
+                                </p>
+                            </div>
+                            <div class="header__finishing-cards">
+                                <div class="territory__cards">
+                                    <div
+                                        class="header__finishing-card-item territory__card-item">
+                                        <div class="territory__card-img">
+                                            <img
+                                                src="./assets/img/ico/check_wd_ico.svg"
+                                                alt="1">
+                                            <h3>Без задержек</h3>
+                                        </div>
+                                        <div class="territory__card-title">
+                                            <p>Зафиксируем срок сдачи ещё до
+                                                старта работ</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="header__finishing-card-item territory__card-item">
+                                        <div class="territory__card-img">
+                                            <img
+                                                src="./assets/img/ico/check_wd_ico.svg"
+                                                alt="2">
+                                            <h3>Без переплат</h3>
+                                        </div>
+                                        <div class="territory__card-title">
+                                            <p>Стоимость ремонта не увеличится в
+                                                процессе</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="header__finishing-card-item territory__card-item">
+                                        <div class="territory__card-img">
+                                            <img
+                                                src="./assets/img/ico/check_wd_ico.svg"
+                                                alt="3">
+                                            <h3>Без суеты</h3>
+                                        </div>
+                                        <div class="territory__card-title">
+                                            <p>Сами купим и привезём всё, что
+                                                нужно для ремонта</p>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="header__finishing-card-item territory__card-item">
+                                        <div class="territory__card-img">
+                                            <img
+                                                src="./assets/img/ico/check_wd_ico.svg"
+                                                alt="4">
+                                            <h3>Гарантия</h3>
+                                        </div>
+                                        <div class="territory__card-title">
+                                            <p>
+                                                Срок гарантии на работы — 1 год
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -96,9 +161,162 @@
             </section>
         </header>
         <main>
-            <section class="contacts__contact-block">
+            <section class="reviews">
+                <div class="container">
+                    <div class="reviews__content">
+                        <div class="reviews__intro title__block">
+                            <h1>Что входит в отделку</h1>
+                        </div>
+                        <div class="reviews__slider component__vue">
+                            <h3>Тут скоро будет "Что входит в отделку" на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="payment">
+                <div class="container">
+                    <div class="payment__content">
+                        <div class="payment__cards-wrapper">
+                            <div class="payment__cards">
+                                <div class="payment__card">
+                                    <div class="payment__title header__finishing-subtitle">
+                                        <h2>Ремонт под ключ</h2>
+                                        <p>Создадим
+                                            уют в вашем доме. Возьмём на себя
+                                            все заботы. Тщательно разработаем
+                                            дизайн, рассчитаем стоимость,
+                                            закупим и доставим материалы, всё
+                                            спланируем и закончим в срок. В
+                                            стоимость входят материалы и
+                                            работы.</p>
+                                        <button class="main__btn">Узнать
+                                            стоимость <img
+                                                src="./assets/img/ico/arrow_right.svg"
+                                                alt="arrow_right"></button>
+                                    </div>
+                                </div>
+                                <div class="payment__img header__finishing-img">
+                                    <img src="./assets/img/finishing/1.webp"
+                                        alt="1">
+                                </div>
+                            </div>
+                            <div class="payment__cards">
+                                <div class="payment__img header__finishing-img">
+                                    <img src="./assets/img/finishing/2.webp"
+                                        alt="2">
+                                </div>
+                                <div class="payment__card">
+                                    <div class="payment__title header__finishing-subtitle">
+                                        <h2>Материнский капитал</h2>
+                                        <p>Большое распространение получило
+                                            использование государственного
+                                            сертификата материнского (семейного)
+                                            капитала для покупки современного
+                                            жилья в нашем коттеджном посёлке.
+                                            Данный сертификат возможно
+                                            использовать для погашения ипотечных
+                                            платежей.</p>
+                                        <button class="main__btn">Узнать
+                                            стоимость <img
+                                                src="./assets/img/ico/arrow_right.svg"
+                                                alt="arrow_right"></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="excursion">
+                <div class="container">
+                    <div class="excursion__content">
+                        <div class="excursion__intro">
+                            <h1><span>Подготовим расчёт</span><br> стоимости
+                                отделки</h1>
+                        </div>
+                        <div class="excursion__form-wrapper">
+                            <div class="excursion__subtitle">
+                                <p>Получите бесплатную консультацию. Задайте
+                                    свой вопрос, который вас интересует, нашему
+                                    менеджеру.</p>
+                                <hr>
+                                <div class="excursion__social">
+                                    <div class="excursion__social-wrapper">
+                                        <a href="#"><img
+                                                src="./assets/img/ico/whatsapp_white.svg"
+                                                alt="whatsapp_white"></a>
+                                        <a href="#"><img
+                                                src="./assets/img/ico/tg_white.svg"
+                                                alt="tg_white"></a>
+                                    </div>
+                                    <div class="excursion__social-tel">
+                                        <a href="tel:+7 (495) 797-70-71">+7
+                                            (495) 797-70-71</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form excursion__form">
+                                <form action="#">
+                                    <input type="text" placeholder="Имя"
+                                        class="form__form-input">
+                                    <input type="tel" placeholder="Телефон"
+                                        class="form__form-input">
+                                    <div class="form__form-polit">
+                                        <label for="excursion-checkbox"
+                                            class="checkbox-label">
+                                            <input type="checkbox"
+                                                id="excursion-checkbox"
+                                                class="checkbox">
+                                            <span class="checkbox-view">
+                                                <svg class="checkbox-icon"
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    width="18"
+                                                    viewBox="0 0 511.985 511.985">
+                                                    <path fill="#fff"
+                                                        d="M500.088 83.681c-15.841-15.862-41.564-15.852-57.426 0L184.205 342.148 69.332 227.276c-15.862-15.862-41.574-15.862-57.436 0-15.862 15.862-15.862 41.574 0 57.436l143.585 143.585c7.926 7.926 18.319 11.899 28.713 11.899 10.394 0 20.797-3.963 28.723-11.899l287.171-287.181c15.862-15.851 15.862-41.574 0-57.435z"></path>
+                                                </svg>
+                                            </span>
+                                            Согласен (-на) с <a href="#">
+                                                политикой конфиденциальности</a>
+                                        </label>
+                                    </div>
+                                    <button class="main__btn"
+                                        type="submit">Записаться на экскурсию
+                                        <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="news">
+                <div class="container">
+                    <div class="news__content">
+                        <div class="news__intro title__block">
+                            <h1>Последние новости</h1>
+                            <div class="news__slider-btn">
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_left.svg"
+                                        alt="slider_arrow_left"></button>
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_right.svg"
+                                        alt="slider_arrow_right"></button>
+                            </div>
+                        </div>
+                        <div class="news__slider component__vue">
+                            <h3>Тут скоро будет слайдер на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contacts">
                 <div class="container">
                     <div class="contacts__content">
+                        <div class="contacts__intro title__block">
+                            <h1>Наши контакты</h1>
+                        </div>
                         <div class="contacts__wrapper-card">
                             <div class="contacts__wrapper-card-item">
                                 <div class="contacts__wrapper-card-head">
@@ -184,6 +402,7 @@
                     </div>
                 </div>
             </section>
+
         </main>
         <footer>
             <section class="footer">
