--- a/index.html
+++ b/index.html
@@ -723,12 +723,12 @@
                     </div>
                 </div>
             </section>
-            <section class="video">
+            <section class="news">
                 <div class="container">
-                    <div class="video__content">
-                        <div class="video__intro title__block">
+                    <div class="news__content">
+                        <div class="news__intro title__block">
                             <h1>Последние новости</h1>
-                            <div class="video__slider-btn">
+                            <div class="news__slider-btn">
                                 <button><img
                                         src="./assets/img/ico/slider_arrow_left.svg"
                                         alt="slider_arrow_left"></button>
@@ -737,7 +737,7 @@
                                         alt="slider_arrow_right"></button>
                             </div>
                         </div>
-                        <div class="video__slider component__vue">
+                        <div class="news__slider component__vue">
                             <h3>Тут скоро будет слайдер на Vue</h3>
                         </div>
                     </div>
