--- a/mortgage.html
+++ b/mortgage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cottage Poselki - Контакты</title>
+        <title>Cottage Poselki - Ипотека</title>
         <link rel="stylesheet" href="./assets/scss/main.css">
     </head>
     <body>
         <header>
-            <section class="header header__contacts">
+            <section class="header header__mortgage">
                 <div class="container">
                     <div class="header__content">
                         <div class="header__navbar">
@@ -81,14 +81,38 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header__contacts-wrapper">
-                            <div class="header__contacts-path">
+                        <div class="header__finishing-wrapper">
+                            <div class="header__pay-path">
                                 <a href="#">Главная</a>
-                                <a href="#"><img src="./assets/img/ico/ellipse.svg" alt="ellipse"></a>
-                                <p>Контакты</p>
+                                <a href="#"><img
+                                        src="./assets/img/ico/ellipse.svg"
+                                        alt="ellipse"></a>
+                                <p>Ипотека</p>
                             </div>
-                            <div class="header__contacts-intro title__block">
-                                <h1>Наши контакты</h1>
+                        </div>
+                        <div class="header__finishing-intro-block">
+                            <div class="header__finishing-intro-item">
+                                <h1>Ипотека</h1>
+                            </div>
+                            <div class="header__mortgage-cards">
+                                <div class="header__mortgage-card-item">
+                                    <img src="./assets/img/ico/check_white.svg"
+                                        alt="check">
+                                    <p>Ипотека от 9.9%
+                                        с первоначальным взносом</p>
+                                </div>
+                                <div class="header__mortgage-card-item">
+                                    <img src="./assets/img/ico/check_white.svg"
+                                        alt="check">
+                                    <p>Ипотека от 10.2%
+                                        без первоначального взноса</p>
+                                </div>
+                                <div class="header__mortgage-card-item">
+                                    <img src="./assets/img/ico/check_white.svg"
+                                        alt="check">
+                                    <p>Ипотека под залог
+                                        недвижимости</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -96,9 +120,197 @@
             </section>
         </header>
         <main>
-            <section class="contacts__contact-block">
+            <section class="documents">
+                <div class="container">
+                    <div class="documents__content">
+                        <div class="documents__intro title__block">
+                            <h1>Перечень документов</h1>
+                        </div>
+                        <div class="documents__cards-wrapper">
+                            <div class="documents__cards-wrapper-head">
+                                <div
+                                    class="documents__card-item documents__card-w30">
+                                    <div class="documents__card-img">
+                                        <img
+                                            src="./assets/img/ico/pasport_mort.svg"
+                                            alt="pasport_mort">
+                                        <h4>Паспорт гражданина РФ</h4>
+                                    </div>
+                                    <div class="documents__card-subtitle">
+                                        <p>Оригинал документа</p>
+                                    </div>
+                                </div>
+                                <div
+                                    class="documents__card-item documents__card-w70">
+                                    <div class="documents__card-img">
+                                        <img
+                                            src="./assets/img/ico/book_mort.svg"
+                                            alt="book_mort">
+                                        <h4>Трудовая книжка</h4>
+                                    </div>
+                                    <div class="documents__card-subtitle">
+                                        <p>Или другой документ, подтверждающие
+                                            занятость (трудовой договор и
+                                            т.п.)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="documents__cards-wrapper-head">
+                                <div
+                                    class="documents__card-item documents__card-w70">
+                                    <div class="documents__card-img">
+                                        <img
+                                            src="./assets/img/ico/ref_mort.svg"
+                                            alt="book_mort">
+                                        <h4>Справка 2 - НДФЛ</h4>
+                                    </div>
+                                    <div class="documents__card-subtitle">
+                                        <p>Или другой документ, подтверждающий
+                                            доход (справка по форме банка, копия
+                                            налоговой декларации и.т.п)</p>
+                                    </div>
+                                </div>
+                                <div
+                                    class="documents__card-item documents__card-w30">
+                                    <div class="documents__card-img">
+                                        <img
+                                            src="./assets/img/ico/ticket_mort.svg"
+                                            alt="pasport_mort">
+                                        <h4>Военный билет</h4>
+                                    </div>
+                                    <div class="documents__card-subtitle">
+                                        <p>Для лиц мужского пола призовного
+                                            возраста (для возможности учета
+                                            дохода )</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="container">
+                    <div class="feedback__content">
+                        <div class="feedback__intro">
+                            <div class="feedback__intro-title">
+                                <h3>Получите ипотеку <br><span>без
+                                        первоначального
+                                        взноса</span></h3>
+                                <p>
+                                    Одобрение заявки занимает от 30 минут до 2
+                                    дней
+                                </p>
+                            </div>
+                            <div class="feedback__bank-wrapper">
+                                <div class="feedback__bank-inner"
+                                    style="margin-left: -22.59px;">
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/1.svg"
+                                            alt="1"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/2.svg"
+                                            alt="2"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/3.svg"
+                                            alt="3"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/4.svg"
+                                            alt="4"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/5.svg"
+                                            alt="5"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/6.svg"
+                                            alt="6"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/7.svg"
+                                            alt="7"></div>
+
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/1.svg"
+                                            alt="1"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/2.svg"
+                                            alt="2"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/3.svg"
+                                            alt="3"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/4.svg"
+                                            alt="4"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/5.svg"
+                                            alt="5"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/6.svg"
+                                            alt="6"></div>
+                                    <div class="feedback__bank-item"><img
+                                            src="./assets/img/bank/7.svg"
+                                            alt="7"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form feedback__form">
+                            <form action="#">
+                                <input type="text" placeholder="Имя"
+                                    class="form__form-input">
+                                <input type="tel" placeholder="Телефон"
+                                    class="form__form-input">
+                                <div class="form__form-polit">
+                                    <label for="feedback-checkbox"
+                                        class="checkbox-label">
+                                        <input type="checkbox"
+                                            id="feedback-checkbox"
+                                            class="checkbox">
+                                        <span class="checkbox-view">
+                                            <svg class="checkbox-icon"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="18"
+                                                viewBox="0 0 511.985 511.985">
+                                                <path fill="#fff"
+                                                    d="M500.088 83.681c-15.841-15.862-41.564-15.852-57.426 0L184.205 342.148 69.332 227.276c-15.862-15.862-41.574-15.862-57.436 0-15.862 15.862-15.862 41.574 0 57.436l143.585 143.585c7.926 7.926 18.319 11.899 28.713 11.899 10.394 0 20.797-3.963 28.723-11.899l287.171-287.181c15.862-15.851 15.862-41.574 0-57.435z"></path>
+                                            </svg>
+                                        </span>
+                                        Согласен (-на) с <a href="#"> политикой
+                                            конфиденциальности</a>
+                                    </label>
+                                </div>
+                                <button class="main__btn" type="submit">Получить
+                                    ипотеку <img
+                                        src="./assets/img/ico/arrow_right.svg"
+                                        alt="arrow_right"></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="news">
+                <div class="container">
+                    <div class="news__content">
+                        <div class="news__intro title__block">
+                            <h1>Последние новости</h1>
+                            <div class="news__slider-btn">
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_left.svg"
+                                        alt="slider_arrow_left"></button>
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_right.svg"
+                                        alt="slider_arrow_right"></button>
+                            </div>
+                        </div>
+                        <div class="news__slider component__vue">
+                            <h3>Тут скоро будет слайдер на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contacts">
                 <div class="container">
                     <div class="contacts__content">
+                        <div class="contacts__intro title__block">
+                            <h1>Наши контакты</h1>
+                        </div>
                         <div class="contacts__wrapper-card">
                             <div class="contacts__wrapper-card-item">
                                 <div class="contacts__wrapper-card-head">
