--- a/parametrs.html
+++ b/parametrs.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cottage Poselki - Контакты</title>
+        <title>Cottage Poselki - Выбор по параметрам</title>
         <link rel="stylesheet" href="./assets/scss/main.css">
     </head>
     <body>
         <header>
-            <section class="header header__contacts">
+            <section class="header header__pay">
                 <div class="container">
                     <div class="header__content">
                         <div class="header__navbar">
@@ -81,14 +81,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header__contacts-wrapper">
-                            <div class="header__contacts-path">
+                        <div class="header__pay-wrapper">
+                            <div class="header__pay-path">
                                 <a href="#">Главная</a>
-                                <a href="#"><img src="./assets/img/ico/ellipse.svg" alt="ellipse"></a>
-                                <p>Контакты</p>
-                            </div>
-                            <div class="header__contacts-intro title__block">
-                                <h1>Наши контакты</h1>
+                                <a href="#"><img
+                                        src="./assets/img/ico/ellipse.svg"
+                                        alt="ellipse"></a>
+                                <p>Выбор по параметрам</p>
                             </div>
                         </div>
                     </div>
@@ -96,9 +95,44 @@
             </section>
         </header>
         <main>
-            <section class="contacts__contact-block">
+            <section class="parametrs">
+                <div class="container">
+                    <div class="parametrs__content">
+                        <div class="parametrs__intro">
+                            <h1>Выбор по параметрам</h1>
+                        </div>
+                        <div class="parametrs__slider component__vue">
+                            <h3>Тут скоро будет выбор по параметрам на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="news">
+                <div class="container">
+                    <div class="news__content">
+                        <div class="news__intro title__block">
+                            <h1>Последние новости</h1>
+                            <div class="news__slider-btn">
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_left.svg"
+                                        alt="slider_arrow_left"></button>
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_right.svg"
+                                        alt="slider_arrow_right"></button>
+                            </div>
+                        </div>
+                        <div class="news__slider component__vue">
+                            <h3>Тут скоро будет слайдер на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contacts">
                 <div class="container">
                     <div class="contacts__content">
+                        <div class="contacts__intro title__block">
+                            <h1>Наши контакты</h1>
+                        </div>
                         <div class="contacts__wrapper-card">
                             <div class="contacts__wrapper-card-item">
                                 <div class="contacts__wrapper-card-head">
