--- a/villages.html
+++ b/villages.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cottage Poselki - Контакты</title>
+        <title>Cottage Poselki - Каталог поселков</title>
         <link rel="stylesheet" href="./assets/scss/main.css">
     </head>
     <body>
         <header>
-            <section class="header header__contacts">
+            <section class="header header__villages">
                 <div class="container">
                     <div class="header__content">
                         <div class="header__navbar">
@@ -23,9 +23,11 @@
                                         <ul>
                                             <li><a href="#">Поселки</a></li>
                                             <li><a href="#">Коттеджи</a></li>
-                                            <li><a href="#">Генплан</a></li>
+                                            <li><a
+                                                    href="./mp.html">Генплан</a></li>
                                             <li><a href="#">Сервис</a></li>
-                                            <li><a href="#">Контакты</a></li>
+                                            <li><a
+                                                    href="./contacts.html">Контакты</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -81,14 +83,36 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header__contacts-wrapper">
-                            <div class="header__contacts-path">
-                                <a href="#">Главная</a>
-                                <a href="#"><img src="./assets/img/ico/ellipse.svg" alt="ellipse"></a>
-                                <p>Контакты</p>
-                            </div>
-                            <div class="header__contacts-intro title__block">
-                                <h1>Наши контакты</h1>
+                        <div
+                            class="header__intro-block header__villages-intro-block">
+                            <div class="header__intro-wrapper">
+                                <div class="header__villages-path">
+                                    <a href="#">Главная</a>
+                                    <a href="#"><img
+                                            src="./assets/img/ico/ellipse.svg"
+                                            alt="ellipse"></a>
+                                    <p>Посёлки</p>
+                                </div>
+                                <div class="header__subtitle">
+                                    <div class="header__subtitle-item">
+                                        <h1>Наши посёлки</h1>
+                                        <p>Обустроенные коттеджные посёлки с развитой
+                                            инфраструктурой</p>
+                                    </div>
+                                    <div class="header__villages-intro-checks header__intro-checks">
+                                        <button><img src="./assets/img/ico/gps.svg"
+                                                alt="gps">МО</button>
+                                        <button><img src="./assets/img/ico/car.svg"
+                                                alt="car">30 км от МКАД</button>
+                                        <button><img
+                                                src="./assets/img/ico/ellipse.svg"
+                                                alt="ellipse">Щелковское
+                                            шоссе</button>
+                                        <button><img
+                                                src="./assets/img/ico/ellipse.svg"
+                                                alt>Горьковское шоссе</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -96,9 +120,266 @@
             </section>
         </header>
         <main>
-            <section class="contacts__contact-block">
+            <section class="poselki">
+                <div class="container">
+                    <div class="poselki__content">
+                        <div class="poselki__slider component__vue">
+                            <h3>Тут скоро будут поселки на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="conditions">
+                <div class="container">
+                    <div class="conditions__content">
+                        <div class="conditions__intro">
+                            <h1>Получите выгодные условия</h1>
+                        </div>
+                        <div class="conditions__wrapper">
+                            <div class="conditions__card">
+                                <div class="conditions__card-title">
+                                    <h2>Доступная ипотека</h2>
+                                </div>
+                                <div class="conditions__card-subtitle">
+                                    <div
+                                        class="conditions__card-subtitle-wrapper">
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            Ипотека от 9.9% с
+                                            первоначальным взносом
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            Ипотека от 10.2% без первоначального
+                                            взноса
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            Ипотека под залог недвижимости
+                                        </p>
+                                    </div>
+                                    <div class="conditions__card-subtitle-img">
+                                        <img
+                                            src="./assets/img/slider/contract.png"
+                                            alt="contract">
+                                    </div>
+                                </div>
+                                <div class="conditions__card-btn">
+                                    <button class="main__btn">Обсудить
+                                        ипотеку <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </div>
+                            </div>
+                            <div class="conditions__card">
+                                <div class="conditions__card-title">
+                                    <h2>Скидка до 500 000 ₽</h2>
+                                </div>
+                                <div class="conditions__card-subtitle">
+                                    <div
+                                        class="conditions__card-subtitle-wrapper">
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            На все наши <br> построенные дома
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            На все наши <br> проекты домов
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            Предложение <br> ограничено
+                                        </p>
+                                    </div>
+                                    <div class="conditions__card-subtitle-img">
+                                        <img src="./assets/img/slider/house.png"
+                                            alt="house">
+                                    </div>
+                                </div>
+                                <div class="conditions__card-btn">
+                                    <button class="main__btn">Обсудить
+                                        ипотеку <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </div>
+                            </div>
+                            <div class="conditions__card">
+                                <div class="conditions__card-title">
+                                    <h2>Скидка на участки 10%</h2>
+                                </div>
+                                <div class="conditions__card-subtitle">
+                                    <div
+                                        class="conditions__card-subtitle-wrapper">
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            В ЖК «Новое <br> Воскресенское»
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            В ЖК <br> «Воскресенское-2»
+                                        </p>
+                                        <p>
+                                            <img
+                                                src="./assets/img/ico/check.svg"
+                                                alt="check">
+                                            В ЖК «Буковая <br> аллея»
+                                        </p>
+                                    </div>
+                                    <div class="conditions__card-subtitle-img">
+                                        <img
+                                            src="./assets/img/slider/location.png"
+                                            alt="location">
+                                    </div>
+                                </div>
+                                <div class="conditions__card-btn">
+                                    <button class="main__btn">Обсудить
+                                        ипотеку <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="reviews">
+                <div class="container">
+                    <div class="reviews__content">
+                        <div class="reviews__intro title__block">
+                            <h1>Отзывы жильцов</h1>
+                            <div class="reviews__slider-btn">
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_left.svg"
+                                        alt="slider_arrow_left"></button>
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_right.svg"
+                                        alt="slider_arrow_right"></button>
+                            </div>
+                        </div>
+                        <div class="reviews__slider component__vue">
+                            <h3>Тут скоро будет слайдер на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="map">
+                <div class="container">
+                    <div class="map__content">
+                        <div class="map__slider component__vue">
+                            <h2>Тут скоро будет карты на Vue</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="excursion">
+                <div class="container">
+                    <div class="excursion__content">
+                        <div class="excursion__intro">
+                            <h1><span>Приезжайте на экскурсию <br></span> по
+                                нашим посёлкам</h1>
+                        </div>
+                        <div class="excursion__form-wrapper">
+                            <div class="excursion__subtitle">
+                                <p>Экскурсия по коттеджному поселку – это
+                                    отличный способ узнать о возможностях
+                                    проживания в будущем доме или даче,
+                                    познакомиться с инфраструктурой и
+                                    особенностями местности, а также
+                                    почувствовать единство с природой.</p>
+                                <hr>
+                                <div class="excursion__social">
+                                    <div class="excursion__social-wrapper">
+                                        <a href="#"><img
+                                                src="./assets/img/ico/whatsapp_white.svg"
+                                                alt="whatsapp_white"></a>
+                                        <a href="#"><img
+                                                src="./assets/img/ico/tg_white.svg"
+                                                alt="tg_white"></a>
+                                    </div>
+                                    <div class="excursion__social-tel">
+                                        <a href="tel:+7 (495) 797-70-71">+7
+                                            (495) 797-70-71</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form excursion__form">
+                                <form action="#">
+                                    <input type="text" placeholder="Имя"
+                                        class="form__form-input">
+                                    <input type="tel" placeholder="Телефон"
+                                        class="form__form-input">
+                                    <div class="form__form-polit">
+                                        <label for="excursion-checkbox"
+                                            class="checkbox-label">
+                                            <input type="checkbox"
+                                                id="excursion-checkbox"
+                                                class="checkbox">
+                                            <span class="checkbox-view">
+                                                <svg class="checkbox-icon"
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    width="18"
+                                                    viewBox="0 0 511.985 511.985">
+                                                    <path fill="#fff"
+                                                        d="M500.088 83.681c-15.841-15.862-41.564-15.852-57.426 0L184.205 342.148 69.332 227.276c-15.862-15.862-41.574-15.862-57.436 0-15.862 15.862-15.862 41.574 0 57.436l143.585 143.585c7.926 7.926 18.319 11.899 28.713 11.899 10.394 0 20.797-3.963 28.723-11.899l287.171-287.181c15.862-15.851 15.862-41.574 0-57.435z"></path>
+                                                </svg>
+                                            </span>
+                                            Согласен (-на) с <a href="#">
+                                                политикой конфиденциальности</a>
+                                        </label>
+                                    </div>
+                                    <button class="main__btn"
+                                        type="submit">Записаться на экскурсию
+                                        <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="news">
+                <div class="container">
+                    <div class="news__content">
+                        <div class="news__intro title__block">
+                            <h1>Последние новости</h1>
+                            <div class="news__slider-btn">
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_left.svg"
+                                        alt="slider_arrow_left"></button>
+                                <button><img
+                                        src="./assets/img/ico/slider_arrow_right.svg"
+                                        alt="slider_arrow_right"></button>
+                            </div>
+                        </div>
+                        <div class="news__slider component__vue">
+                            <h3>Тут скоро будет слайдер на Vue</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contacts">
                 <div class="container">
                     <div class="contacts__content">
+                        <div class="contacts__intro title__block">
+                            <h1>Наши контакты</h1>
+                        </div>
                         <div class="contacts__wrapper-card">
                             <div class="contacts__wrapper-card-item">
                                 <div class="contacts__wrapper-card-head">
